5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1594_2425.log
== TEST (2019-03-30 23:14:50) 
-- CODE:
d=float(input("DIstancia: ")
g=float(input("Combustivel gasto: "))
		  
consumo=float(round(d/g),2 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    g=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:15:34) 
-- CODE:
d=float(input("Distancia: ")
g=float(input("Combustivel: "))
		  
consumo=float(round(d/g),2 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    g=float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:17:34) 
-- CODE:
d=float(input("Distancia: ")
g=float(input("Combustivel: ")
		  
consumo=float(round(d/g),2 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    g=float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:18:24) 
-- CODE:
d= float(input("Distancia: ")
g= float(input("Combustivel: ")
		  
consumo=float(round(d/g),2 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    g= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:18:45) 
-- CODE:
d= float(input("Distancia: ")
f= float(input("Combustivel: ")
		  
consumo=float(round(d/f),2 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    f= float(input()
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:21:23) 
-- CODE:
var1= float(input("Distancia: ")
var2= float(input("Combustivel: ")
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    var2= float(input()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:22:07) 
-- CODE:
var1= float(input("Distancia: ")
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    var2= float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:01:51) 
-- CODE:
var1= float(input("Distancia: ")
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    var2= float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:13) 
-- CODE:
var1= float(input("Distancia: ")
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    var2= float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:30) 
-- CODE:
var1= float(input("Distancia: ")
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 2
    var2= float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:47) 
-- CODE:
var1= float(input("Distancia: "))
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 km/l)
print(consumo)
-- ERROR:
File "XXXX", line 4
    consumo=float(round(var1/var2),3 km/l)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:40:59) 
-- CODE:
var1= float(input("Distancia: "))
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 "km/l")
print(consumo)
-- ERROR:
File "XXXX", line 4
    consumo=float(round(var1/var2),3 "km/l")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:41:13) 
-- CODE:
var1= float(input("Distancia: "))
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3 )"km/l"
print(consumo)
-- ERROR:
File "XXXX", line 4
    consumo=float(round(var1/var2),3 )"km/l"
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:42:00) 
-- CODE:
var1= float(input("Distancia: "))
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3),"km/l" 
print(consumo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumo=float(round(var1/var2),3),"km/l" 
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:42:03) 
-- CODE:
var1= float(input("Distancia: "))
var2= float(input("Combustivel: "))
		  
consumo=float(round(var1/var2),3),"km/l" 
print(consumo)
-- EXECUTION TIME:
0.182174
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 4, in <module>
    consumo=float(round(var1/var2),3),"km/l" 
TypeError: float() takes at most 1 argument (2 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:53:28) 
-- CODE:
a= float(input("Distancia: "))
b= float(input("Combustivel: "))
	
x=a/b
consumo=float(round(var1/var2),3),"km/l" 
print(consumo)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    consumo=float(round(var1/var2),3),"km/l" 
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:53:29) 
-- CODE:
a= float(input("Distancia: "))
b= float(input("Combustivel: "))
	
x=a/b
consumo=float(round(var1/var2),3),"km/l" 
print(consumo)
-- EXECUTION TIME:
0.195094
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2425/main.py", line 5, in <module>
    consumo=float(round(var1/var2),3),"km/l" 
NameError: name 'var1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:54:22) 
-- CODE:
a= float(input("Distancia: "))
b= float(input("Combustivel: "))
	
x=a/b
print(round(x,3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:54:23) 
-- CODE:
a= float(input("Distancia: "))
b= float(input("Combustivel: "))
	
x=a/b
print(round(x,3),"km/l")

-- EXECUTION TIME:
0.21483
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
